--- a/빅히스토리2교시.md
+++ b/빅히스토리2교시.md
@@ -1,1 +1,24 @@
 ### 2교시: 우주가 팽창한다는 것을 어떻게 알았을까?
+
+
+ 우선 천체의 거리를 알 수 있어야 하는데, 절대밝기를 알면 겉보기밝기와 비교해서 거리를 알 수 있다. > 1908년 세페이드 변광성을 표준촛불로 활용하여 먼 천체의 절대밝기를 알 수 있게 되었다. > 1923년 안드로메다성운의 세페이드 변광성 주기를 관찰하여 절대밝기를 알고 그로부터 거리를 계산하여 안드로메다가 우리 은하 바깥의 또다른 은하임을 알게 되었다. > 1929년 다른 은하들이 우리 은하와의 거리에 비례하는 속도로 멀어지고 있다는 것을 발견했다. > 1929년 우리 은하가 우주에서 특별한 위치에 있는 것이 아닐 것이며, 우주는 팽창하고 있다고 해석할 수밖에 없다.
+* 인용자료: <우주의 끝을 찾아서>, <사이먼 싱의 빅뱅>, <오리진>, 위키백과
+[1] 1908년: 표준촛불을 찾았다. (헨리아테 리비트 세페이드 변광성 주기-광도 관계)
+- (당시에는 은하인줄 몰랐기 때문에 마젤란 성운이라고 불렀던) 마젤란 은하의 1777개 세페이드 변광성을 관측하여 주기-광도 관계를 발견한 하버드 천문대의 computer 리비트의 논문이 발표됨
+[2] 1915년: 일반상대성이론 발표 (아인슈타인)
+- 아인슈타인은 1931년까지 우주의 팽창을 인정하지 않았다. 우주는 수축하지도 팽창하지도 않는다고 확신했기 때문이다. 그런데 아인슈타인이 1915년 발표한 일반상대성이론에 따르면 우주는 결국 중력 때문에 수축할 수밖에 없다. 고민 끝에 고안해낸 것이 수축을 막는 힘, ‘우주상수’다. 우주상수는 아무 것도 없는 빈 공간에서 나오는 보이지 않는 힘으로 물질을 밀어내는 역할을 한다. 훗날 허블의 발견으로 우주 팽창이 명확해지자 아인슈타인은 우주상수를 ‘일생일대 실수’라고 말했다.
+[4] 1920년 : 대논쟁 (섀플리-커티스 논쟁)
+- 우리 은하 밖에 다른 은하가 있는가에 대한 격렬한 논쟁
+[5] 1923년: 우리 은하 바깥에 다른 은하가 있다는 것을 발견했다. (허블)
+- 윌슨산 천문대 100인치 망원경이 완성되고 1923년 허블이 처음으로 안드로메다성운을 개개의 별들로 분해해서 볼 수 있었다. (당시에는 안드로메다가 은하인지 몰라서 성운으로 분류했음)
+- 안드로메다성운의 세페이드 변광성을 발견하여 겉보기밝기 관측하고, 주기로부터 절대밝기를 추정해서 거리를 계산했는데, 안드로메다성운은 90만 광년, 혹은 우리은하에서 가장 먼 천체들보다 10배나 먼 거리에 있었다는 것을 알게 되었다. 이후 거리 측정 방법이 재조정되어 현재는 안드로메다은하 거리는 200만 광년 이상으로 늘어났다.
+[6] 1929년: 다른 은하들이 우리 은하와의 거리에 비례하는 속도로 멀어지고 있다는 것을 발견했다. (허블의 법칙)
+- 1929년에 허블이 은하들의 적색편이가 대략 우리은하로부터의 거리에 비례해 증가한다는 것을 발견
+[7] 1929년: 우주가 팽창한다는 해석이 받아들여졌다.
+- 안드로메다성운 같은 몇 개의 이웃을 제외하고 다른 은하들은 일반적으로 우리은하로부터 멀어져가고 있는 것으로 보였다. 물론 이 사실은 우리은하가 어떤 특별한 중심적 위치를 차지하고 있음을 의미하는 것이 아니었다. 그보다는 우주가 어떤 폭발을 겪고 있어서 모든 은하가 모든 다른 은하로부터 멀어져가고 있는 것 같았다. 이 해석은 1929년에 허블이 은하들의 적색편이가 대략 우리은하로부터의 거리에 비례해 증가한다는 것을 발견했다고 발표한 후에 일반적으로 인정받게 되었다.
+[8] 1980년대: 아주 먼 천체의 거리 측정이 가능해졌다. (1a형 초신성)
+- 질량이 큰 별이 폭발하는 초신성은 폭발할 때의 질량이 모두 다르기 때문에 밝기가 일정하지 않아서 거리 측정의 도구로 사용하기에는 어려움이 많다. 그런데 천문학자들에게는 너무나 다행스럽게도 거리를 측정하는 도구로 사용할 수 있는 초신성이 존재한다. 그것은 바로 앞의 초신성들과는 전혀 다른 형태로 폭발하는 1a형 초신성이다.
+- 1980년대 중반 천문학자들은 백색왜성이 이웃별에서 물질을 공급받아 폭발하는 초신성을 1a형 초신성으로 구별하기 시작했다. 1a형 초신성은 특별한 조건에서 만들어지기 때문에 원래 밝기가 거의 일정하다. 초신성이 거리 측정 도구로 사용될 수 있는 가능성이 더 커진 것이다.
+[9] 1998년: 우주는 가속 팽창 한다.
+- 아인슈타인이 포기했던 우주상수는 70년 뒤 극적으로 부활한다. 1998년 우주 가속 팽창이 발견되면서 가속 팽창을 일으키는 암흑에너지를 설명하기 위해 우주상수가 다시 주목을 받게 된 것이다.
+- 우주를 구성하는 성분 중에서 우리가 정체를 아는 것은 5%도 안 됩니다. 25%는 중력으로만 존재를 알 수 있는 암흑물질이고, 나머지 70%는 정체를 전혀 알 수 없는 암흑에너지로 이뤄져 있죠. 암흑물질은 끌어당기고 암흑에너지는 밀어냅니다. 우주의 역사는 곧 암흑물질과 암흑에너지의 줄다리기라고 할 수 있습니다. 암흑에너지는 빈 공간에서 나오기 때문에 빈 공간이 커질수록 점점 더 커져요. 우주 초기, 다시 말해 우주가 작았을 때는 암흑에너지도 작아서 역할이 미미했지만, 우주가 팽창하면서 빈 공간이 점점 커지자 결국 암흑물질을 이겼죠. 실제로 우주는 처음 70억년 동안 감속 팽창을 하다가 그 뒤로 가속 팽창을 하고 있어요. 시간이 흐를수록 암흑에너지 비율은 점점 더 커져서 우주는 영원히 가속 팽창할 것입니다.
