--- a/빅히스토리2교시.md
+++ b/빅히스토리2교시.md
@@ -1,7 +1,7 @@
 ## 2교시: 우주가 팽창한다는 것을 어떻게 알았을까?
 
 `인용자료: <우주의 끝을 찾아서>, <사이먼 싱의 빅뱅>, <오리진>, 위키백과`
-##### * 우선 천체의 거리를 알 수 있어야 하는데, 절대밝기를 알면 겉보기밝기와 비교해서 거리를 알 수 있다. 
+##### - 우선 천체의 거리를 알 수 있어야 하는데, 절대밝기를 알면 겉보기밝기와 비교해서 거리를 알 수 있다. 
 * 1908년: 표준촛불을 찾았다. (헨리에타 리비트가 세페이드 변광성의 주기-광도 관계를 발견)
   * (당시에는 은하인줄 몰랐기 때문에 마젤란 성운이라고 불렀던) 마젤란 은하의 1777개 세페이드 변광성을 관측하여 주기-광도 관계를 발견한 하버드 천문대의 computer 리비트의 논문이 발표됨
 * 1908년 세페이드 변광성을 표준촛불로 활용하여 먼 천체의 절대밝기를 알 수 있게 되었다. 
