--- a/빅히스토리2교시.md
+++ b/빅히스토리2교시.md
@@ -2,8 +2,8 @@
 
 `인용자료: <우주의 끝을 찾아서>, <사이먼 싱의 빅뱅>, <오리진>, 위키백과`
 * 우선 천체의 거리를 알 수 있어야 하는데, 절대밝기를 알면 겉보기밝기와 비교해서 거리를 알 수 있다. 
-* 1908년: 표준촛불을 찾았다. (헨리에타 리비트가 세페이드 변광성의 주기-광도 관계를 발견)
-  * (당시에는 은하인줄 몰랐기 때문에 마젤란 성운이라고 불렀던) 마젤란 은하의 1777개 세페이드 변광성을 관측하여 주기-광도 관계를 발견한 하버드 천문대의 computer 리비트의 논문이 발표됨
+* 1908년: 표준촛불을 찾았다.
+  * 하버드 천문대의 computer 헨리에타 리비트가 (당시에는 은하인줄 몰랐기 때문에 마젤란 성운이라고 불렀던) 마젤란 은하의 1777개 세페이드 변광성을 관측하여 주기-광도 관계를 발견하여 논문 발표
 * 1908년 세페이드 변광성을 표준촛불로 활용하여 먼 천체의 절대밝기를 알 수 있게 되었다. 
 * 1915년: 일반상대성이론 발표 (아인슈타인)
   * 아인슈타인은 1931년까지 우주의 팽창을 인정하지 않았다. 우주는 수축하지도 팽창하지도 않는다고 확신했기 때문이다. 그런데 아인슈타인이 1915년 발표한 일반상대성이론에 따르면 우주는 결국 중력 때문에 수축할 수밖에 없다. 고민 끝에 고안해낸 것이 수축을 막는 힘, ‘우주상수’다. 우주상수는 아무 것도 없는 빈 공간에서 나오는 보이지 않는 힘으로 물질을 밀어내는 역할을 한다. 훗날 허블의 발견으로 우주 팽창이 명확해지자 아인슈타인은 우주상수를 ‘일생일대 실수’라고 말했다.
