--- a/빅히스토리2교시.md
+++ b/빅히스토리2교시.md
@@ -17,9 +17,9 @@
   * 1929년에 허블이 은하들의 적색편이가 대략 우리은하로부터의 거리에 비례해 증가한다는 것을 발견
 * **1929년 우주가 팽창한다는 해석이 받아들여졌다.**
  * 안드로메다성운 같은 몇 개의 이웃을 제외하고 다른 은하들은 일반적으로 우리은하로부터 멀어져가고 있는 것으로 보였다. 물론 이 사실은 우리은하가 어떤 특별한 중심적 위치를 차지하고 있음을 의미하는 것이 아니었다. 그보다는 우주가 어떤 폭발을 겪고 있어서 모든 은하가 모든 다른 은하로부터 멀어져가고 있는 것 같았다. 이 해석은 1929년에 허블이 은하들의 적색편이가 대략 우리은하로부터의 거리에 비례해 증가한다는 것을 발견했다고 발표한 후에 일반적으로 인정받게 되었다.
-* **1980년대 1a형 초신성이라는 새로운 표준촛불울 발견하여 아주 먼 천체의 거리 측정이 가능해졌다.*
+* **1980년대 1a형 초신성이라는 새로운 표준촛불울 발견하여 아주 먼 천체의 거리 측정이 가능해졌다.**
  * 질량이 큰 별이 폭발하는 초신성은 폭발할 때의 질량이 모두 다르기 때문에 밝기가 일정하지 않아서 거리 측정의 도구로 사용하기에는 어려움이 많다. 그런데 천문학자들에게는 너무나 다행스럽게도 거리를 측정하는 도구로 사용할 수 있는 초신성이 존재한다. 그것은 바로 다른  초신성들과는 전혀 다른 형태로 폭발하는 1a형 초신성이다.
   * 1980년대 중반 천문학자들은 백색왜성이 이웃별에서 물질을 공급받아 폭발하는 초신성을 1a형 초신성으로 구별하기 시작했다. 1a형 초신성은 특별한 조건에서 만들어지기 때문에 원래 밝기가 거의 일정하다. 초신성이 거리 측정 도구로 사용될 수 있는 가능성이 더 커진 것이다.
-* **1998년 우주가 가속팽창 한다는 것을 알게 되었다. 
+* **1998년 우주가 가속팽창 한다는 것을 알게 되었다.**
   * 아인슈타인이 포기했던 우주상수는 70년 뒤 극적으로 부활한다. 1998년 우주 가속 팽창이 발견되면서 가속 팽창을 일으키는 암흑에너지를 설명하기 위해 우주상수가 다시 주목을 받게 된 것이다.
   * 우주를 구성하는 성분 중에서 우리가 정체를 아는 것은 5%도 안 됩니다. 25%는 중력으로만 존재를 알 수 있는 암흑물질이고, 나머지 70%는 정체를 전혀 알 수 없는 암흑에너지로 이뤄져 있죠. 암흑물질은 끌어당기고 암흑에너지는 밀어냅니다. 우주의 역사는 곧 암흑물질과 암흑에너지의 줄다리기라고 할 수 있습니다. 암흑에너지는 빈 공간에서 나오기 때문에 빈 공간이 커질수록 점점 더 커져요. 우주 초기, 다시 말해 우주가 작았을 때는 암흑에너지도 작아서 역할이 미미했지만, 우주가 팽창하면서 빈 공간이 점점 커지자 결국 암흑물질을 이겼죠. 실제로 우주는 처음 70억년 동안 감속 팽창을 하다가 그 뒤로 가속 팽창을 하고 있어요. 시간이 흐를수록 암흑에너지 비율은 점점 더 커져서 우주는 영원히 가속 팽창할 것입니다.
