--- a/3.md
+++ b/3.md
@@ -1,7 +1,7 @@
 ## 2교시: 우주가 팽창한다는 것을 어떻게 알았을까?
 
 `인용자료: <우주의 끝을 찾아서>, <사이먼 싱의 빅뱅>, <오리진>, 위키백과`
-#### 우주가 팽창한다는 것을 어떻게 알았을까?
+### 우주가 팽창한다는 것을 어떻게 알았을까?
 * **우선 천체의 거리를 알 수 있어야 하는데, 절대밝기를 알면 겉보기밝기와 비교해서 거리를 알 수 있다.**
 * **1908년 표준촛불을 찾았다.**
   * 하버드 천문대의 computer 헨리에타 리비트가 (당시에는 은하인줄 몰랐기 때문에 마젤란 성운이라고 불렀던) 마젤란 은하의 1777개 세페이드 변광성을 관측하여 주기-광도 관계를 발견하여 논문 발표
@@ -19,7 +19,7 @@
 * **1929년 우주가 팽창한다는 해석이 받아들여졌다.**
  * 안드로메다성운 같은 몇 개의 이웃을 제외하고 다른 은하들은 일반적으로 우리은하로부터 멀어져가고 있는 것으로 보였다. 물론 이 사실은 우리은하가 어떤 특별한 중심적 위치를 차지하고 있음을 의미하는 것이 아니었다. 그보다는 우주가 어떤 폭발을 겪고 있어서 모든 은하가 모든 다른 은하로부터 멀어져가고 있는 것 같았다. 이 해석은 1929년에 허블이 은하들의 적색편이가 대략 우리은하로부터의 거리에 비례해 증가한다는 것을 발견했다고 발표한 후에 일반적으로 인정받게 되었다.
  
-#### 우주가 가속 팽창한다는 것을 어떻게 알았을까?
+### 우주가 가속 팽창한다는 것을 어떻게 알았을까?
 * **1980년대 1a형 초신성이라는 새로운 표준촛불을 발견하여 아주 먼 천체의 거리 측정이 가능해졌다.**
  * 질량이 큰 별이 폭발하는 초신성은 폭발할 때의 질량이 모두 다르기 때문에 밝기가 일정하지 않아서 거리 측정의 도구로 사용하기에는 어려움이 많다. 그런데 천문학자들에게는 너무나 다행스럽게도 거리를 측정하는 도구로 사용할 수 있는 초신성이 존재한다. 그것은 바로 다른  초신성들과는 전혀 다른 형태로 폭발하는 1a형 초신성이다.
   * 1980년대 중반 천문학자들은 백색왜성이 이웃별에서 물질을 공급받아 폭발하는 초신성을 1a형 초신성으로 구별하기 시작했다. 1a형 초신성은 특별한 조건에서 만들어지기 때문에 원래 밝기가 거의 일정하다. 초신성이 거리 측정 도구로 사용될 수 있는 가능성이 더 커진 것이다.
