--- a/3.md
+++ b/3.md
@@ -1,4 +1,4 @@
-## 2교시: 우주가 팽창한다는 것을 어떻게 알았을까?
+### 2교시: 우주가 팽창한다는 것을 어떻게 알았을까?
 ---
 `인용자료: <우주의 끝을 찾아서>, <사이먼 싱의 빅뱅>, <오리진>, 위키백과`
 ### 우주가 팽창한다는 것을 어떻게 알았을까?
