--- a/2.md
+++ b/2.md
@@ -1,16 +1,17 @@
 ### 2교시: 우주가 팽창한다는 것을 어떻게 알았을까?
 ---
-사전학습 자료: 
-우주론 논쟁     http://m.navercast.naver.com/mobile_contents.nhn…
-빅뱅의 메아리   http://m.navercast.naver.com/mobile_contents.nhn…
-암흑물질        http://m.navercast.naver.com/mobile_contents.nhn…
-암흑에너지      http://m.navercast.naver.com/mobile_contents.nhn…
-교과서 1-2단원 
+
+사전학습 자료:
+[우주론 논쟁](http://navercast.naver.com/mobile_contents.nhn?rid=20&contents_id=1321)    
+[빅뱅의 메아리](http://navercast.naver.com/mobile_contents.nhn?rid=20&contents_id=1603)    
+[암흑물질](http://navercast.naver.com/contents.nhn?rid=20&pc&contents_id=11)    
+[암흑에너지](http://navercast.naver.com/contents.nhn?rid=20&pc&contents_id=57)    
+교과서 1-2단원     
 
 추천참고 도서: 
-리비트의 별 - 조지 존슨. 궁리출판사 
-우주를 낳은 위대한 질문들 - 스튜어트 클라크. 휴먼사이언스 
-우주의 끝을 찾아서 - 이강환. 현암사 
+*리비트의 별 - 조지 존슨. 궁리출판사 
+*우주를 낳은 위대한 질문들 - 스튜어트 클라크. 휴먼사이언스 
+*우주의 끝을 찾아서 - 이강환. 현암사 
 
 
 `인용자료: <우주의 끝을 찾아서>, <사이먼 싱의 빅뱅>, <오리진>, 위키백과`
